apps/development/forgejo/templates/forgejo-shell-ingressroutetcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: forgejo-ssh
  namespace: development
spec:
  ingressClassName: traefik
  entryPoints:
  - forgejo-ssh
  routes:
  - match: HostSNI(`*`)
    services:
    - name: forgejo-ssh
      port: 2222
