apps/development/forgejo/templates/forgejo-shell-tcproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: forgejo-ssh
  namespace: development
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
      sectionName: forgejo-ssh
  rules:
    - backendRefs:
        - name: forgejo-ssh
          port: 2222
